// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DetailsCard Snapshots should match snapshot for corner card 1`] = `
<div>
  <div
    class="bg-white rounded-xl shadow-2xl border-4 border-amber-500 overflow-hidden"
    style="width: 300px;"
  >
    <div
      class="relative"
    >
      <div
        class="w-full flex flex-col items-center justify-center relative"
        style="padding-top: 16px; padding-bottom: 16px; min-height: 140px;"
      >
        <div
          style="width: 80px; height: 80px; margin-bottom: 12px; display: flex; align-items: center; justify-content: center;"
        >
          <svg
            class="lucide lucide-ban w-8 h-8"
            fill="none"
            height="24"
            stroke="currentColor"
            stroke-linecap="round"
            stroke-linejoin="round"
            stroke-width="2"
            viewBox="0 0 24 24"
            width="24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <circle
              cx="12"
              cy="12"
              r="10"
            />
            <path
              d="m4.9 4.9 14.2 14.2"
            />
          </svg>
        </div>
      </div>
      <button
        class="absolute top-2 right-2 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors border-2 border-amber-600"
      >
        <svg
          class="lucide lucide-x w-4 h-4 text-amber-700"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <h3
        class="text-center mb-4 text-gray-900"
      >
        SEASON KICK-OFF
      </h3>
      <div
        class="space-y-3"
      >
        <div
          class="text-sm text-gray-700 text-center py-4 bg-amber-50 rounded-lg border-2 border-amber-200"
        >
          Collect €200 salary
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsCard Snapshots should match snapshot for property card 1`] = `
<div>
  <div
    class="bg-white rounded-xl shadow-2xl border-4 border-amber-500 overflow-hidden"
    style="width: 300px;"
  >
    <div
      class="relative"
    >
      <div
        class="w-full flex flex-col items-center justify-center relative"
        style="padding-top: 16px; padding-bottom: 16px; min-height: 140px;"
      >
        <div
          style="width: 80px; height: 80px; margin-bottom: 12px;"
        >
          <div
            class="w-full h-full relative flex items-center justify-center w-full h-full"
          >
            <img
              alt="Fenerbahçe SK logo"
              data-nimg="1"
              decoding="async"
              height="100"
              loading="lazy"
              src="http://localhost/_next/image?url=https%3A%2F%2Fexample.com%2Ffenerbahce.png&w=256&q=75"
              srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Ffenerbahce.png&w=128&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Ffenerbahce.png&w=256&q=75 2x"
              style="color: transparent; height: 100%; width: auto; object-fit: contain;"
              width="100"
            />
          </div>
        </div>
        <div
          class="flex items-center gap-2"
        >
          <div
            class="text-white text-sm font-semibold"
          >
            TURKIYE
          </div>
        </div>
      </div>
      <button
        class="absolute top-2 right-2 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors border-2 border-amber-600"
      >
        <svg
          class="lucide lucide-x w-4 h-4 text-amber-700"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <h3
        class="text-center mb-4 text-gray-900"
      >
        Fenerbahçe SK
      </h3>
      <div
        class="space-y-3"
      >
        <div
          class="flex justify-between py-2 border-b border-gray-200"
        >
          <span
            class="text-gray-700"
          >
            Purchase Price
          </span>
          <span
            class="text-green-900"
          >
            €
            60
          </span>
        </div>
        <div
          class="bg-green-50 p-4 rounded-lg border-2 border-green-200"
        >
          <p
            class="text-green-900 mb-2"
          >
            Rent Structure:
          </p>
          <div
            class="space-y-1 text-sm"
          >
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700"
              >
                Bare Site Rent
              </span>
              <span
                class="text-green-900"
              >
                €
                2
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-house w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                 1 
                Training Pitch
              </span>
              <span
                class="text-green-900"
              >
                €
                10
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-house w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                 2 
                Training Pitch
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                30
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-house w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                 3 
                Training Pitch
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                90
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-house w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M15 21v-8a1 1 0 0 0-1-1h-4a1 1 0 0 0-1 1v8"
                  />
                  <path
                    d="M3 10a2 2 0 0 1 .709-1.528l7-5.999a2 2 0 0 1 2.582 0l7 5.999A2 2 0 0 1 21 10v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z"
                  />
                </svg>
                 4 
                Training Pitch
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                160
              </span>
            </div>
            <div
              class="flex justify-between border-t border-green-300 pt-1 mt-1"
            >
              <span
                class="text-green-900 flex items-center gap-1"
              >
                <svg
                  class="lucide lucide-building2 lucide-building-2 w-3 h-3"
                  fill="none"
                  height="24"
                  stroke="currentColor"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="2"
                  viewBox="0 0 24 24"
                  width="24"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M6 22V4a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v18Z"
                  />
                  <path
                    d="M6 12H4a2 2 0 0 0-2 2v6a2 2 0 0 0 2 2h2"
                  />
                  <path
                    d="M18 9h2a2 2 0 0 1 2 2v9a2 2 0 0 1-2 2h-2"
                  />
                  <path
                    d="M10 6h4"
                  />
                  <path
                    d="M10 10h4"
                  />
                  <path
                    d="M10 14h4"
                  />
                  <path
                    d="M10 18h4"
                  />
                </svg>
                 
                Youth Academy
              </span>
              <span
                class="text-green-900"
              >
                €
                250
              </span>
            </div>
          </div>
        </div>
        <div
          class="bg-yellow-50 p-3 rounded-lg border-2 border-yellow-300"
        >
          <div
            class="flex justify-between text-sm"
          >
            <span
              class="text-gray-700"
            >
              Training Pitch
               Cost
            </span>
            <span
              class="text-gray-900"
            >
              €
              50
            </span>
          </div>
        </div>
        <div
          class="flex justify-between py-2"
        >
          <span
            class="text-gray-700"
          >
            Financial Restructuring
             Value 
          </span>
          <span
            class="text-green-900"
          >
            €
            30
          </span>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsCard Snapshots should match snapshot for transport card 1`] = `
<div>
  <div
    class="bg-white rounded-xl shadow-2xl border-4 border-amber-500 overflow-hidden"
    style="width: 300px;"
  >
    <div
      class="relative"
    >
      <div
        class="w-full flex flex-col items-center justify-center relative"
        style="padding-top: 16px; padding-bottom: 16px; min-height: 140px;"
      >
        <div
          style="width: 80px; height: 80px; margin-bottom: 12px; display: flex; align-items: center; justify-content: center;"
        >
          <img
            alt="UEFA Champions League"
            data-nimg="1"
            decoding="async"
            height="80"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fexample.com%2Fucl.png&w=256&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fucl.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fucl.png&w=256&q=75 2x"
            style="color: transparent; width: 80px; height: 80px; object-fit: contain;"
            width="80"
          />
        </div>
      </div>
      <button
        class="absolute top-2 right-2 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors border-2 border-amber-600"
      >
        <svg
          class="lucide lucide-x w-4 h-4 text-amber-700"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <h3
        class="text-center mb-4 text-gray-900"
      >
        UEFA Champions League
      </h3>
      <div
        class="space-y-3"
      >
        <div
          class="flex justify-between py-2 border-b border-gray-200"
        >
          <span
            class="text-gray-700"
          >
            Purchase Price
          </span>
          <span
            class="text-green-900"
          >
            €
            200
          </span>
        </div>
        <div
          class="bg-yellow-50 p-4 rounded-lg border-2 border-yellow-300"
        >
          <p
            class="text-green-900 mb-2"
          >
            Tournament Fee
            :
          </p>
          <div
            class="space-y-1 text-sm"
          >
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700"
              >
                1 
                Tournament
              </span>
              <span
                class="text-green-900"
              >
                €
                25
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700"
              >
                2 
                Tournament
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                50
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700"
              >
                3 
                Tournament
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                100
              </span>
            </div>
            <div
              class="flex justify-between"
            >
              <span
                class="text-gray-700"
              >
                4 
                Tournament
                s
              </span>
              <span
                class="text-green-900"
              >
                €
                200
              </span>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`DetailsCard Snapshots should match snapshot for utility card 1`] = `
<div>
  <div
    class="bg-white rounded-xl shadow-2xl border-4 border-amber-500 overflow-hidden"
    style="width: 300px;"
  >
    <div
      class="relative"
    >
      <div
        class="w-full flex flex-col items-center justify-center relative"
        style="padding-top: 16px; padding-bottom: 16px; min-height: 140px;"
      >
        <div
          style="width: 80px; height: 80px; margin-bottom: 12px; display: flex; align-items: center; justify-content: center;"
        >
          <img
            alt="Broadcasting Rights"
            data-nimg="1"
            decoding="async"
            height="80"
            loading="lazy"
            src="/_next/image?url=https%3A%2F%2Fexample.com%2Fbroadcast.png&w=256&q=75"
            srcset="/_next/image?url=https%3A%2F%2Fexample.com%2Fbroadcast.png&w=96&q=75 1x, /_next/image?url=https%3A%2F%2Fexample.com%2Fbroadcast.png&w=256&q=75 2x"
            style="color: transparent; width: 80px; height: 80px; object-fit: contain;"
            width="80"
          />
        </div>
      </div>
      <button
        class="absolute top-2 right-2 bg-white rounded-full p-2 shadow-lg hover:bg-gray-100 transition-colors border-2 border-amber-600"
      >
        <svg
          class="lucide lucide-x w-4 h-4 text-amber-700"
          fill="none"
          height="24"
          stroke="currentColor"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
          viewBox="0 0 24 24"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M18 6 6 18"
          />
          <path
            d="m6 6 12 12"
          />
        </svg>
      </button>
    </div>
    <div
      class="p-6"
    >
      <h3
        class="text-center mb-4 text-gray-900"
      >
        Broadcasting Rights
      </h3>
      <div
        class="space-y-3"
      >
        <div
          class="flex justify-between py-2 border-b border-gray-200"
        >
          <span
            class="text-gray-700"
          >
            Purchase Price
          </span>
          <span
            class="text-green-900"
          >
            €
            150
          </span>
        </div>
        <div
          class="bg-blue-50 p-4 rounded-lg text-sm text-gray-700 border-2 border-blue-300"
        >
          <p
            class="mb-2"
          >
            If one 
            Income Stream
             is owned, rent is 
            4
             times the dice roll.
          </p>
          <p>
            If both 
            Income Stream
            s are owned, rent is 
            10
             times the dice roll.
          </p>
        </div>
      </div>
    </div>
  </div>
</div>
`;
